# stag-brozury

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  __main__.py  app.py  create_df.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  stag_data.py  test.html  test.ipynb  utils.py
app/: main.py  models.py  utils.py
app/routers/: ws.py
app/templates/: base.html  index.html
app/templates/components/: predmet.html  predmet_modal.html  predmety.html  programy.html  table.html
app/templates/pages/: home.html  obor.html  predmet.html  programy.html
templates/: base.html  home.html  predmet.html
