[tool.poetry]
name = "stag-brozury"
version = "0.1.0"
description = "Aplikace pro zobrazení studijních programů na PřF UJEP"
authors = ["yoptohlejepeta <peta.kotlan@seznam.cz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.103.1"
httpx = "^0.25.0"
uvicorn = "^0.23.2"
pandas = "^2.1.1"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
pydantic = "^2.4.2"
ipykernel = "^6.25.2"
openpyxl = "^3.1.2"
requests = "^2.31.0"
unidecode = "^1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
